--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "node"
-  - "7"
-  - "6"
+  - node
+  - 7
+  - 6
 cache:
   directories:
-    - "node_modules"
+    - node_modules
