--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A tiny module used to verify SecureLogin tokens",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --reporter spec --require test/bootstrap/node test/*.test.js"
+    "test": "nyc --reporter=html --reporter=text mocha --reporter spec --require test/bootstrap/node test/*.test.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
   },
   "devDependencies": {
     "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "coveralls": "^2.13.1",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.2"
   },
   "author": "Andrew Dassonville <dassonville.andrew@gmail.com>",
   "license": "MIT",
